pxc/tests/test_019_thread/thr5.px
import common -;

public namespace thr5;
import thread -;

multithreaded struct my_thread_obj (io::io sys0) {
  int x;
  int y;
  io::io sys = sys0;
  function void main() {
    const stdout = sys.stdout();
    io::standard::file_println(stdout, "my thread main");
    io::standard::file_println(stdout, x);
    io::standard::file_println(stdout, y);
  }
}

function void test1()
{
  io::io i;
    // error: io_impl is not default-constructible
  const thr = make_thread(my_thread_obj(i));
  thr.join();
}

test1();

